--- a/.air.toml
+++ b/.air.toml
@@ -3,9 +3,9 @@ testdata_dir = "testdata"
 tmp_dir = "./air/tmp"
 
 [build]
-  bin = "air\\tmp\\main.exe"
+  bin = "main"
+  cmd = "go build -o ./main.exe ./cmd/mnimidamon-server"
   args_bin = ["--port 1000"]
-  cmd = "go build -o ./air/tmp/main.exe ./cmd/mnimidamon-server"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
@@ -17,7 +17,7 @@ tmp_dir = "./air/tmp"
   include_ext = ["go", "tpl", "tmpl", "html"]
   kill_delay = "0s"
   log = "build-errors.log"
-  send_interrupt = false
+  send_interrupt = true
   stop_on_error = true
 
 [color]
@@ -28,7 +28,7 @@ tmp_dir = "./air/tmp"
   watcher = "cyan"
 
 [log]
-  time = true
+  time = false
 
 [misc]
   clean_on_exit = true
