--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
+          workdir: ./cmd/mnimidamon-server
           distribution: goreleaser
           version: latest
           args: release --rm-dist
