--- a/.github/workflows/code_testing.yml
+++ b/.github/workflows/code_testing.yml
@@ -17,5 +17,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Run Tests
         run: sudo go test ./... -v
