GCO included in Testing Workflow Action

--- a/.github/workflows/code_testing.yml
+++ b/.github/workflows/code_testing.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
+      - name: Install GCO for Fyne
+        run: sudo apt-get install golang gcc libgl1-mesa-dev xorg-dev
       - name: Checkout
         uses: actions/checkout@v2
       - name: Run Tests
