--- a/.github/workflows/build_artifacts.yml
+++ b/.github/workflows/build_artifacts.yml
@@ -38,22 +38,16 @@ jobs:
           mv ./fyne-cross ./fc
       - name: Compile Linux Binaries
         run: sudo ./fc linux -arch=amd64,386,arm -app-id mnimidamon-client -icon $GITHUB_WORKSPACE/public/mnimidamon-server-icon.png -name mnimidamon-server  $GITHUB_WORKSPACE/cmd/mnimidamon-server-gui
-      - name: Show Files
-        run: |
-          tree .
       - name: Compile Windows Binaries
         run: sudo ./fc windows -arch=amd64,386 -app-id mnimidamon-client -icon $GITHUB_WORKSPACE/public/mnimidamon-server-icon.png -name mnimidamon-server.exe $GITHUB_WORKSPACE/cmd/mnimidamon-server-gui
-      - name: Show Files
-        run: |
-          tree .
       - name: Move and Rename Binaries
         run: |
           sudo mkdir $GITHUB_WORKSPACE/dist
-          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/windows-386/mnimidamon-server.exe.zip $GITHUB_WORKSPACE/dist/mnimidamon-server_windows-386.exe.zip
-          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/windows-amd64/mnimidamon-server.exe.zip $GITHUB_WORKSPACE/dist/mnimidamon-server_windows-amd64.exe.zip
-          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-amd64/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server_linux-amd64.tar.gz
-          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-386/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server_linux-386.tar.gz
-          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-arm/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server_linux-arm.tar.gz
+          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/windows-386/mnimidamon-server.exe.zip $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_windows-386.exe.zip
+          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/windows-amd64/mnimidamon-server.exe.zip $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_windows-amd64.exe.zip
+          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-amd64/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_linux-amd64.tar.gz
+          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-386/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_linux-386.tar.gz
+          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-arm/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_linux-arm.tar.gz
       - name: Show Files
         run: |
           tree .
