--- a/.github/workflows/build_artifacts.yml
+++ b/.github/workflows/build_artifacts.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Move and Rename Binaries
         run: |
           sudo mkdir $GITHUB_WORKSPACE/dist
-          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/windows-386/mnimidamon-server.exe.zip $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_windows-386.exe.zip
-          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/windows-amd64/mnimidamon-server.exe.zip $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_windows-amd64.exe.zip
+          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/windows-386/mnimidamon-server.zip $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_windows-386.zip
+          sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/windows-amd64/mnimidamon-server.zip $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_windows-amd64.zip
           sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-amd64/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_linux-amd64.tar.gz
           sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-386/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_linux-386.tar.gz
           sudo mv $GITHUB_WORKSPACE/fyne-cross/dist/linux-arm/mnimidamon-server.tar.gz $GITHUB_WORKSPACE/dist/mnimidamon-server-${GITHUB_REF##*/}_linux-arm.tar.gz
