--- a/.github/workflows/build_artifacts.yml
+++ b/.github/workflows/build_artifacts.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Fyne Cross
         run: |
-          go install github.com/fyne-io/fyne-cross
+          go get github.com/fyne-io/fyne-cross@develop
           go build github.com/fyne-io/fyne-cross
           mv ./fyne-cross ./fc
       - name: Compile Linux Binaries
