--- a/.github/workflows/build_artifacts.yml
+++ b/.github/workflows/build_artifacts.yml
@@ -28,10 +28,12 @@ jobs:
       - name: Checkout Fyne-Cross Develop branch
         uses: actions/checkout@v2
         with:
-          name: fyne-io/fyne-cross@develop
+          repository: fyne-io/fyne-cross
+          ref: develop
+          path: fyne-cross-d
       - name: Make Windows and Docker Image
         run: |
-          cd fyne-cross
+          cd fyne-cross-d
           make windows
           make linux
           cd ..
