--- a/.github/workflows/build_artifacts.yml
+++ b/.github/workflows/build_artifacts.yml
@@ -2,6 +2,10 @@ name: build binaries
 
 on:
   push:
+    tags:
+      - 'v*'
+    paths-ignore:
+      - '**.md'
   pull_request:
     branches:
       - 'master'
